--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/* App.css */
+
 .App {
   text-align: center;
 }
@@ -14,18 +16,49 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #6891e2;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(14px + 2vmin); 
   color: white;
 }
 
+
+.App-button-container {
+  display: flex;
+  flex-direction: row; 
+  gap: 10px; 
+  margin-top: 20px; 
+}
+
+
 .App-link {
-  color: #61dafb;
+  padding: 10px 20px; 
+  text-decoration: none; 
+  color: white;
+  background-color: #4CAF50; 
+  border-radius: 5px; 
+  transition: background-color 0.3s ease; 
+}
+
+.App-link:hover {
+  background-color: #45a049; 
+}
+
+
+.App-title {
+  font-size: 50px; 
+  font-weight: bold; 
+  margin-bottom: 20px; 
+}
+
+.App-creator {
+  margin-top: 20px; 
+  font-size: 20px;
+  font-style: italic; 
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +68,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+  animation: App-logo-spin infinite 20s linear; 
+  margin-bottom: 3%;
 }
