--- a/src/styles/estiloReservas.css
+++ b/src/styles/estiloReservas.css
@@ -47,7 +47,7 @@
 .submit-button {
   width: 100%; /* Ocupa todo el ancho disponible */
   padding: 10px 20px;
-  background-color: #007bff;
+  background-color: #4CAF50; 
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -57,7 +57,7 @@
 }
 
 .submit-button:hover {
-  background-color: #0056b3;
+  background-color: #45a049; 
 }
 
 /* Estilo para el enlace de volver */
